<resources>
    <string name="app_name">Challenge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="unset_count">0</string>
    <string name="unset">unset</string>
    <string name="logs_heading">Logs</string>

    <string name="sweet_calorie_title">Sweet calories</string>
    <string name="overall_calorie_title">Total calories</string>
    <string name="daily_calories_title">Today</string>
    <string name="budget_left_title">Remaining</string>

    <string name="empty"></string>
    <string name="calorie_hint">100</string>
    <string name="description_hint">Honey toast</string>
    <string name="add_calorie_log">Add Entry</string>
    <string name="is_sweet">Sweet</string>
    <string name="edit_logs_heading">Edit Entry</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="overall_budget">Total Calories</string>
    <string name="sweet_budget">Sweet Calories</string>
    <string name="reset">Reset</string>

    <!-- Calorie Preferences -->
    <string name="enabled">Enabled</string>
    <string name="budget">Daily calorie budget</string>
    <string name="overall_budget_preference_desc">Total number of calories added each day. It includes the sweet calorie budget, if enabled.</string>
    <string name="sweet_budget_preference_desc">Total number of sweet calories added each day.</string>
    <string name="reset_all">Reset calorie history</string>
    <string name="reset_desc">Resets the calorie history of your app to as new. This will delete all your logged calories!</string>
</resources>