<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CalorieLogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/calorie_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop ="10sp"
            android:layout_marginRight="5sp"
            android:layout_marginLeft="5sp"
            android:clickable="true"
            android:background="@drawable/light_yellow_rounded_corners"
            android:id="@+id/overall_calorie_bar">

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/overall_calorie_title"
                android:text="@string/overall_calorie_title" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="40sp"
                android:id="@+id/calorie_count"
                android:gravity="center"
                android:text="@string/unset_count" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="40sp"
                android:id="@+id/daily_calorie_count"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/unset_count" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/overall_daily_calorie_title"
                android:text="@string/daily_calories_title" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/overall_budget_left_title"
                android:text="@string/budget_left_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop ="10sp"
            android:layout_marginRight="5sp"
            android:layout_marginLeft="5sp"
            android:clickable="true"
            android:background="@drawable/light_yellow_rounded_corners"
            android:id="@+id/sweet_calorie_bar">

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/sweet_calorie_title"
                android:text="@string/sweet_calorie_title" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="40sp"
                android:id="@+id/sweet_calorie_count"
                android:gravity="center"
                android:text="@string/unset_count" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="40sp"
                android:id="@+id/daily_sweet_calorie_count"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/unset_count" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/sweet_daily_calorie_title"
                android:text="@string/daily_calories_title" />

            <TextView
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/sweet_budget_left_title"
                android:text="@string/budget_left_title" />

        </LinearLayout>

        <EditText
            android:id="@+id/enter_calories"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="4sp"
            android:hint="@string/calorie_hint" />

        <EditText
            android:id="@+id/enter_description"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="4sp"
            android:hint="@string/description_hint" />

        <CheckBox
            android:id="@+id/sweet_checkbox"
            android:layout_width="wrap_content"
            android:checked="false"
            android:text="@string/is_sweet"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_calorie_log"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="10sp"
            android:enabled="false"
            android:text="@string/add_calorie_log" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5sp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/calorie_logs"
                android:stretchColumns="1">
            </TableLayout>
        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
